--- a/index.html
+++ b/index.html
@@ -4,12 +4,111 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FONTAWESOME -->
-    <script src="https://kit.fontawesome.com/c2709405dd.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/c2709405dd.js" crossorigin="anonymous"></script> -->
     <!-- GOOGLE FONT -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/main.css">
     <title>ZOOM</title>
   </head>
   <body>
+
+    <div id="main-container">
+
+      <!-- TOPBAR -->
+      <div id="top-bar" class="red">TOPBAR</div>
+
+
+      <!-- CONTENT -->
+      <div id="main-user" class="blue">
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=1" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=2" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=3" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=4" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=5" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=6" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=7" alt="">
+        </div>
+
+        <div class="user active">
+          <img src="https://i.pravatar.cc/400?img=8" alt="">
+        </div>
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=9" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=10" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=11" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=12" alt="">
+        </div>
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=13" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=14" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=15" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=16" alt="">
+        </div>
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=17" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=18" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=19" alt="">
+        </div>
+
+        <div class="user">
+          <img src="https://i.pravatar.cc/400?img=20" alt="">
+        </div>
+
+      </div>
+
+
+
+
+      <!-- CALL TO ACTION -->
+      <div id=cta class="green">CTO</div>
+
+    </div>
+
 
   </body>
 </html>
