--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FONTAWESOME -->
-    <!-- <script src="https://kit.fontawesome.com/c2709405dd.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/c2709405dd.js" crossorigin="anonymous"></script>
     <!-- GOOGLE FONT -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <!-- CSS -->
@@ -24,79 +24,139 @@
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=1" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=2" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=3" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=4" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=5" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=6" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=7" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user active">
           <img src="https://i.pravatar.cc/400?img=8" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=9" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=10" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=11" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=12" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=13" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=14" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=15" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=16" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=17" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=18" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=19" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=20" alt="">
+          <div class="icon">
+            <i class="fas fa-microphone-alt-slash"></i>
+          </div>
         </div>
 
       </div>
@@ -105,7 +165,63 @@
 
 
       <!-- CALL TO ACTION -->
-      <div id=cta class="green">CTO</div>
+      <div id=cta>
+        <div class="left-cta">
+          <ul class="inline-list vanilla-list">
+            <li>
+              <a href="#">
+                <i class="block fas fa-microphone-alt-slash"></i>
+                <span>Unmute</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="block fas fa-video"></i>
+                <span>Stop video</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="center-cta">
+          <ul class="inline-list vanilla-list">
+            <li>
+              <a href="#">
+              <i class="block fas fa-user-plus"></i>
+                <span>Invite</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="block fas fa-user-friends"></i>
+                <span>Manage Partecipants</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="block fas fa-external-link-alt"></i>
+                <span>Share Screen</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="block fas fa-comment-dots"></i>
+                <span>Chat</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="block fas fa-record-vinyl"></i>
+                <span>Record</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="right-cta">
+          <a href="#">End Meeting</a>
+        </div>
+      </div>
 
     </div>
 
