Creation: Top-Bar

--- a/index.html
+++ b/index.html
@@ -16,11 +16,25 @@
     <div id="main-container">
 
       <!-- TOPBAR -->
-      <div id="top-bar" class="red">TOPBAR</div>
+      <div id="top-bar">
+        <div class="title">
+          <span>Total non-video partecipants: 4</span>
+          <i class="fas fa-caret-down"></i>
+        </div>
+
+        <div class="right-bar">
+          <div class="speaker">
+            <a href="#"><i class="fas fa-tv"></i> Speaker View</a>
+          </div>
+          <div class="full-screen">
+            <a href="#"><i class="fas fa-compress-arrows-alt"></i></a>
+          </div>
+        </div>
+      </div>
 
 
       <!-- CONTENT -->
-      <div id="main-user" class="blue">
+      <div id="main-user">
 
         <div class="user">
           <img src="https://i.pravatar.cc/400?img=1" alt="">
