Fixing: Code Fixing

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
 
+    <!-- MAIN CONTAINER -->
     <div id="main-container">
 
       <!-- TOPBAR -->
@@ -32,8 +33,7 @@
         </div>
       </div>
 
-
-      <!-- CONTENT -->
+      <!-- MAIN USER -->
       <div id="main-user">
 
         <div class="user">
@@ -175,9 +175,6 @@
 
       </div>
 
-
-
-
       <!-- CALL TO ACTION -->
       <div id=cta>
         <div class="left-cta">
@@ -238,7 +235,6 @@
       </div>
 
     </div>
-
 
   </body>
 </html>
